i think i fixed a bug...

--- a/Rush00/Rush00/Rush00/Views/Base.lproj/Main.storyboard
+++ b/Rush00/Rush00/Rush00/Views/Base.lproj/Main.storyboard
@@ -18,40 +18,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Khv-gz-HdE">
-                                <rect key="frame" x="140" y="335.5" width="95" height="60"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6of-Ph-jua">
+                                <rect key="frame" x="168" y="318.5" width="38" height="30"/>
                                 <state key="normal" title="Login"/>
                                 <connections>
-                                    <segue destination="DV9-Hz-sOJ" kind="show" id="ChP-Vl-v6l"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6of-Ph-jua">
-                                <rect key="frame" x="164" y="561" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <segue destination="Fpp-Ij-0es" kind="show" id="SbT-wb-rB7"/>
+                                    <segue destination="Fpp-Ij-0es" kind="show" identifier="oauthSegue" id="SbT-wb-rB7"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Khv-gz-HdE" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="DNK-Zh-uaW"/>
-                            <constraint firstItem="Khv-gz-HdE" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="I4o-Ai-adl"/>
+                            <constraint firstItem="6of-Ph-jua" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="fQk-hs-e3V"/>
+                            <constraint firstItem="6of-Ph-jua" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vJ0-MM-QkI"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="j43-kd-bvc"/>
+                    <navigationItem key="navigationItem" id="j43-kd-bvc">
+                        <barButtonItem key="backBarButtonItem" title="Logout" id="CkC-RY-6oN"/>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="aAW-0v-IOX" kind="show" identifier="topicsSegue" id="gok-e9-ZTp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-48.799999999999997" y="-52.623688155922046"/>
         </scene>
-        <!--Auth2 Web View Controller-->
+        <!--Authorization View Controller-->
         <scene sceneID="Ovl-MU-7lq">
             <objects>
-                <viewController id="Fpp-Ij-0es" customClass="OAuth2WebViewController" customModule="Rush00" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Fpp-Ij-0es" customClass="AuthorizationViewController" customModule="Rush00" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Puv-Xc-Q7X">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -64,16 +60,6 @@
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                             </wkWebView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Woq-8N-UOy">
-                                <rect key="frame" x="67" y="301" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="lZX-Fb-85E">
-                                        <rect key="frame" x="110" y="54" width="20" height="20"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </activityIndicatorView>
-                                </subviews>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -85,7 +71,6 @@
                         <viewLayoutGuide key="safeArea" id="eqx-4y-PZh"/>
                     </view>
                     <connections>
-                        <outlet property="loadingView" destination="Woq-8N-UOy" id="BnK-DH-xVi"/>
                         <outlet property="webView" destination="sT3-G1-Lv2" id="qdP-Kz-gIi"/>
                     </connections>
                 </viewController>
@@ -93,39 +78,13 @@
             </objects>
             <point key="canvasLocation" x="-49" y="689"/>
         </scene>
-        <!--Login View Controller-->
-        <scene sceneID="644-dC-a9k">
+        <!--TopicsViewController-->
+        <scene sceneID="V53-QI-FhX">
             <objects>
-                <viewController id="DV9-Hz-sOJ" customClass="LoginViewController" customModule="Rush00" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="xkf-1i-63h">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tho-Ew-ERV">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <wkWebViewConfiguration key="configuration">
-                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
-                                    <wkPreferences key="preferences"/>
-                                </wkWebViewConfiguration>
-                            </wkWebView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="qfs-Od-sqo" firstAttribute="bottom" secondItem="Tho-Ew-ERV" secondAttribute="bottom" id="Ice-ig-nZE"/>
-                            <constraint firstItem="Tho-Ew-ERV" firstAttribute="leading" secondItem="qfs-Od-sqo" secondAttribute="leading" id="R2s-ph-a2N"/>
-                            <constraint firstItem="Tho-Ew-ERV" firstAttribute="top" secondItem="qfs-Od-sqo" secondAttribute="top" id="vHc-fB-j66"/>
-                            <constraint firstItem="qfs-Od-sqo" firstAttribute="trailing" secondItem="Tho-Ew-ERV" secondAttribute="trailing" id="yTF-uB-R1C"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="qfs-Od-sqo"/>
-                    </view>
-                    <connections>
-                        <outlet property="webView" destination="Tho-Ew-ERV" id="ET3-Lk-UDQ"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VZF-oi-ByS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardIdentifier="TopicsViewController" storyboardName="TopicsStoryboard" referencedIdentifier="TopicsViewController" id="aAW-0v-IOX" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4wF-ev-LOM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="804" y="-53.523238380809602"/>
+            <point key="canvasLocation" x="814" y="-53"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="YkB-XB-YSr">
